# ai-pr-agent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.github_action  Dockerfile.github_action_dockerhub  MANIFEST.in  README.md  RELEASE_NOTES.md  action.yaml  pyproject.toml  requirements.txt
ai_pr_agent/: cli.py  cli_pip.py
ai_pr_agent/agent/: ai_pr_agent.py
ai_pr_agent/algo/: file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  utils.py
ai_pr_agent/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
ai_pr_agent/identity_providers/: __init__.py  default_identity_provider.py
ai_pr_agent/log/: __init__.py
ai_pr_agent/secret_providers/: __init__.py  google_cloud_storage_secret_provider.py
ai_pr_agent/servers/: azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  help.py  serverless.py
ai_pr_agent/settings/: configuration.toml
ai_pr_agent/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_message.py  pr_information_from_user.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py
docker/: Dockerfile  Dockerfile.lambda
docs/: mkdocs.yml
docs/docs/: index.md
github_action/: entrypoint.sh
tests/unittest/: test_clip_tokens.py  (+15 more)
(+31 files in other folders)
